# immersive-spot-teleoperation

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: OculusRenderer.hpp  Shader.hpp  StreamCapture.hpp  main.hpp
scripts/: oculus_client.py  oculus_client_original.py  oculus_katvr_calibration.py
scripts/katvr/: data_analysis.py  data_logger.py  katvr.py  katvr_log.py  katvr_main.py  katvr_osc_sockets.py  osc_server.py
scripts/katvr/logs/: katvr_log_lateral_movement.csv  katvr_log_turning_in_place.csv  katvr_log_walking.csv
scripts/oculus/: input_processor.py  katvr_calibration.py  oculus_client.py  oculus_katvr_calibration.py  oculus_test.py  spot_pid.json  spot_pid_config.json
scripts/spot/: input_controller.py  spot_client.py  spot_controller.py  spot_interface.py  zed_interface.py
scripts/spot_client/: spot_client.py  zed_interface.py
src/: OculusRenderer.cpp  Shader.cpp  StreamCapture.cpp  main.cpp  main_no_gpu.cpp  main_temp.cpp  main_test.cpp
test/: check_libraries.cpp  hdm_test.cpp  listener.py  publisher.cpp
